assets/styles/style.css
/* ... */
		/*.theme:nth-child( 2n ) .theme--image-cover{
			background-color: #ffffff;
		}*/

	.theme .theme--content{
		position: relative;
		top: 92vh;
		top: calc( 100vh - 2.6rem );
		height: 85vh;
		height: calc( 100vh - 2.7rem );
		overflow: hidden;
		box-sizing: border-box;
	}
		.theme .theme--leader{
			padding: 0.9rem 1.75rem 0.9rem;
			position: sticky;
			top: 0;
		}
			.theme .theme--leader h1{
				margin-bottom: 0;
				line-height: 1rem;
				white-space: nowrap;
			}

		.theme .theme--follower{
			height: 100%;
			box-sizing: border-box;
			padding: 1.3em 1.75rem 10em 1.75rem;
		}
	.theme.locked{
		overflow-y: hidden;
	}
		.theme.locked .theme--content .theme--follower{
			overflow-y: scroll;
		}
	.theme .theme--section{
		margin-bottom: 4em;
	}
		.theme .theme--section > h2{
			border-bottom: 1px solid #000000;
			padding-bottom: .4em;
			margin-bottom: .45em;
		}
		.theme__network-ensemble .theme--section > h2{
			border-bottom: 1px solid #ffffff;
		}

		.theme .theme--section ul{
			padding: 0;
			list-style-type: none;
		}

		.theme--section__notes .theme-item__post h3{
			max-width: 100%;
			/*white-space: nowrap;
			text-overflow: ellipsis;*/
			overflow: hidden;
		}

	.theme-item__hasimg{
		position: relative;
		z-index: 0;
	}
		.theme-item__hasimg h3{
			position: relative;
			z-index: 2;
			cursor: crosshair;
		}
		.theme-item__hasimg .theme-item--hoverimg{
			display: none;
			position: absolute;
			width: 100%;
			max-width: 24em;
			padding: 2em;
			box-sizing: border-box;
			transform: translate( -50%, -50% );
			top: 50%;
			left: 50%;
			z-index: 2;
			pointer-events: none;
		}
		.theme-item__hasimg:hover{
			z-index: 2;
		}
		.theme-item--hoverimg.active{
			display: block;
		}
			.theme-item__hasimg.hoverimg-active h3{
				overflow: visible;
			}
			.theme-item__hasimg h3 .text{
				transition: filter .13s ease-in;
			}
			.theme-item__hasimg.hoverimg-active h3 .text{
				filter: blur( 5px );
				overflow: visible;
			}

		.dc-hoverimg-trigger{
			display: inline-block;
			vertical-align: top;
			margin-right: .2em;
			border: 1px solid #000000;
			width: 2em;
			height: .8em;
			position: relative;
			top: 0.2em;
		}
			.dc-hoverimg-trigger:after{
				content: 'IMG';
				font-size: .4em;
				line-height: 2.2em;
				display: inline-block;
				vertical-align: top;
				text-align: center;
				width: 100%;
			}
			.theme__network-ensemble .dc-hoverimg-trigger{
				border-color: #FFFFFF;
			}

	.theme-item__work{
		margin-bottom: 4em;
	}
		.theme-item__work img{
			display: block;
			width: 100%;
		}
		.theme-item__work h2{
			margin: 0 0 .4em 0;
		}

.theme .theme--section__research ul{
	list-style-type: decimal;
	padding-left: 1em;
}
.theme .theme--section__notes ul{
	padding-left: 1em;
}
.theme .theme--section__notes ul li{
	position: relative;
}
.theme .theme--section__notes ul li:before{
	content: '– ';
	display: inline-block;
	position: absolute;
	left: -1em;
	top: -2px;
}
	.theme .theme--section__research{
		margin-top: 0.6em;
	}
	.theme .theme--section__research ul li{
		margin-bottom: 0.45em;
	}
	.theme .theme--section__research ul li h3{
		display: inline;
	}
	.theme .theme--section__notes ul li h3{
		margin-bottom: 1em;
	}


.theme[data-proportion="large"] .theme--section__description{
	width: 66.66%;
}
/*.theme[data-proportion="large"] .theme--section__notes ul,
.theme[data-proportion="large"] .theme--section__research ul{
	max-width: 80%;
}*/

.theme[data-proportion="small"],
.theme[data-proportion="tiny"]{
	font-size: .75em;
}
	.theme[data-proportion="small"] .theme--section,
	.theme[data-proportion="small"] .theme-item__work{
		margin-bottom: 2em;
	}
	.theme[data-proportion="small"] .theme-item__hasimg .theme-item--hoverimg{
		max-width: 100%;
		padding: 1em;
	}

.theme[data-proportion="tiny"] .theme-item__work,
.theme[data-proportion="tiny"] .theme--section{
	margin-bottom: 1.75rem;
}
.theme[data-proportion="tiny"] .theme--section__description,
.theme[data-proportion="tiny"] .theme-item__work h2{
	display: none;
}
	.theme[data-proportion="tiny"]  .theme--section__research ul li h3,
	.theme[data-proportion="tiny"]  .theme--section__notes ul li h3{
		font-size: 0;
		height: 1rem;
		white-space: nowrap;
	}
	.theme[data-proportion="tiny"] .theme-item__hasimg .theme-item--hoverimg{
		padding: 0;
		display: none;
	}
		.theme[data-proportion="tiny"] .theme-item__hasimg h3{
			cursor: default;
		}
		.theme[data-proportion="tiny"] .dc-hoverimg-trigger{
			display: none;
		}
		.theme[data-proportion="tiny"]  .theme--section__notes ul li:after,
		.theme[data-proportion="tiny"]  .theme--section__research ul li a:after{
			content: 'Note';
			display: inline-block;
    	position: absolute;
    	left: 0;
			top: 0;
		}
			.theme[data-proportion="tiny"]  .theme--section__research ul li{
				position: relative;
			}
			.theme[data-proportion="tiny"]  .theme--section__research ul li a:after{
				content: 'Rsrch';
			}

	.theme[data-proportion="tiny"] .theme--leader h1{
		text-align: center;
	}
	.theme[data-proportion="tiny"] .theme--leader h1 span{
		display: none;
	}
		.theme[data-proportion="tiny"] .theme--leader h1 span:first-child{
			display: block;
		}
/* about */
.about-wrapper .about--extra,
.about-wrapper .about--content{
	width: 50%;
	height: 100%;
	right: 0;
	top: 0;
	padding: 2rem;
	box-sizing: border-box;
}
	.about-wrapper .about--extra{
		padding-top: 4rem;
		left: 0;
	}
		.about-wrapper .about--extra a{
			border-bottom: none;
		}

	.about-wrapper .about--content{
		overflow-y: scroll;
		position: absolute;
		padding-top: 1.3rem;
		border-left: 1px solid #FFFFFF;
	}

/* quadrant page */
.quadrant-wrapper{
	background: #FFFFFF;
	height: 100%;
	width: 100%;
}
	.quadrant-wrapper__network-ensemble{
		background: #000000;
		color: #FFFFFF;
	}
	.quadrant-wrapper .quadrant-section{
		width: 50%;
		height: 50%;
		//outline: 1px solid #000000;
		display: inline-block;
		box-sizing: border-box;
		padding: 2rem;
		overflow: hidden;
	}
/* ... */

